Tags add getByContentId, getByCategoryId
